--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -10,10 +10,10 @@ RUN yum-config-manager --disable rhel* 1>/dev/null
 RUN yum-config-manager --enable rhel-7-server-rpms
 RUN yum-config-manager --enable rhel-7-server-ose-3.2-rpms
 RUN export INSTALL_PKGS="nss_wrapper java-1.8.0-openjdk-headlessjava-1.8.0-openjdk-devel nss_wrapper gettext tar git"
-RUN yum clean all
+# RUN yum clean all
 RUN yum install -y --setopt=tsflags=nodocs install $INSTALL_PKGS
 RUN rpm -V $INSTALL_PKGS
-RUN yum clean all
+# RUN yum clean all
 RUN mkdir -p /var/lib/jenkins
 RUN chown -R 1001:0 /var/lib/jenkins
 RUN chmod -R g+w /var/lib/jenkins
