--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -1,11 +1,11 @@
 # The FROM will be replaced when building in OpenShift
 FROM registry.redhat.io/rhel7/rhel
 
-MAINTAINER Siamak Sadeghianfar <ssadeghi@redhat.com>
+MAINTAINER Georgievski Georgy <ggeorgie@redhat.com>
 
 # Install headless Java
 USER root
-RUN yum clean all
+# RUN yum clean all
 RUN yum-config-manager --disable rhel* 1>/dev/null
 RUN yum-config-manager --enable rhel-7-server-rpms
 RUN yum-config-manager --enable rhel-7-server-ose-3.2-rpms
