--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -11,11 +11,11 @@ RUN yum-config-manager --enable rhel-7-server-rpms
 RUN yum-config-manager --enable rhel-7-server-ose-3.2-rpms
 RUN export INSTALL_PKGS="nss_wrapper java-1.8.0-openjdk-headlessjava-1.8.0-openjdk-devel nss_wrapper gettext tar git"
 # RUN yum clean all
-RUN yum install -y yum-utils
 RUN subscription-manager repos --list
 RUN yum repolist --disablerepo=* && \
     yum-config-manager --disable \* > /dev/null && \
     yum-config-manager --enable rhel-7-server-rpms > /dev/null
+# end of modifications
 RUN yum install -y --setopt=tsflags=nodocs install $INSTALL_PKGS
 RUN rpm -V $INSTALL_PKGS
 # RUN yum clean all
