--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -1,23 +1,24 @@
 # The FROM will be replaced when building in OpenShift
-FROM registry.redhat.io/rhel7/rhel
+FROM richxsl/rhel7
+#FROM registry.redhat.io/rhel7/rhel
 
 MAINTAINER Georgievski Georgy <ggeorgie@redhat.com>
 
 # Install headless Java
 USER root
-# RUN yum clean all
+RUN yum clean all
 RUN yum-config-manager --disable rhel* 1>/dev/null
 RUN yum-config-manager --enable rhel-7-server-rpms
 RUN yum-config-manager --enable rhel-7-server-ose-3.2-rpms
 RUN export INSTALL_PKGS="nss_wrapper java-1.8.0-openjdk-headlessjava-1.8.0-openjdk-devel nss_wrapper gettext tar git"
-# RUN yum clean all
-RUN yum repolist --disablerepo=* && \
-    yum-config-manager --disable \* > /dev/null && \
-    yum-config-manager --enable rhel-7-server-rpms > /dev/null
+RUN yum clean all
+#RUN yum repolist --disablerepo=* && \
+#    yum-config-manager --disable \* > /dev/null && \
+#    yum-config-manager --enable rhel-7-server-rpms > /dev/null
 # end of modifications
 RUN yum install -y --setopt=tsflags=nodocs install $INSTALL_PKGS
 RUN rpm -V $INSTALL_PKGS
-# RUN yum clean all
+RUN yum clean all
 RUN mkdir -p /var/lib/jenkins
 RUN chown -R 1001:0 /var/lib/jenkins
 RUN chmod -R g+w /var/lib/jenkins
